--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -93,19 +93,19 @@ jobs:
 
       - name: build Docker image on push event
         if: github.event_name == 'push'
-        run: docker build -t $REGISTRY/$CONTAINER_NAME:${GITHUB_SHA::7} .
+        run: docker build -t $REGISTRY/$IMAGE_NAME:${GITHUB_SHA::7} .
 
       - name: build Docker image on PR event
         if: github.event_name == 'pull_request'
-        run: docker build -t $REGISTRY/$CONTAINER_NAME:${github.event.pull_request.head.sha::7} .
+        run: docker build -t $REGISTRY/$IMAGE_NAME:${github.event.pull_request.head.sha::7} .
 
       - name: push Docker image on push event
         if: github.event_name == 'push'
-        run: docker push $REGISTRY/$CONTAINER_NAME:${GITHUB_SHA::7}
+        run: docker push $REGISTRY/$IMAGE_NAME:${GITHUB_SHA::7}
 
       - name: push Docker image on PR event
         if: github.event_name == 'pull_request'
-        run: docker push $REGISTRY/$CONTAINER_NAME:${github.event.pull_request.head.sha::7}
+        run: docker push $REGISTRY/$IMAGE_NAME:${github.event.pull_request.head.sha::7}
 
       #---Build Docker image, Login & Publish to Docker Packages - WITH 3RD PARTY ACTIONS---
       #- name: Log in to the Container registry
