--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,10 +7,6 @@ on:
   pull_request:
     branches: [master, dev]
 
-#env:
-#  NODE_VER: 16.x
-#  UBUNTU_VER: ubuntu-20.04
-
 jobs:
   test_job:
     timeout-minutes: 30
@@ -93,11 +89,11 @@ jobs:
 
       - name: build Docker image on push event
         if: github.event_name == 'push'
-        run: docker build -t $REGISTRY/$IMAGE_NAME:${GITHUB_SHA::7} .
+        run: docker build -t $REGISTRY/$IMAGE_NAME:${GITHUB_SHA::7} -t $REGISTRY/$IMAGE_NAME:latest .
 
       - name: build Docker image on PR event
         if: github.event_name == 'pull_request'
-        run: docker build -t $REGISTRY/$IMAGE_NAME:${github.event.pull_request.head.sha::7} .
+        run: docker build -t $REGISTRY/$IMAGE_NAME:${github.event.pull_request.head.sha::7} -t -t $REGISTRY/$IMAGE_NAME:latest .
 
       - name: push Docker image on push event
         if: github.event_name == 'push'
