--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -132,7 +132,7 @@ jobs:
     needs: [build_job, test_job]
     steps:
       - name:  Extract TEST and BUILD job starting & ending time
-        id: execution_timestamps_test
+        id: execution_timestamps
         run: |
           echo "::set-output name=starttime_test::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[0].started_at')" && echo "::set-output name=endtime_test::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[0].completed_at')"
           echo "::set-output name=starttime_build::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[1].started_at')" && echo "::set-output name=endtime_build::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[1].completed_at')"
@@ -140,10 +140,10 @@ jobs:
       - name: calculate time
         id: calculate_time
         run: |
-          started_at_test=${{steps.execution_timestamps_test.outputs.starttime_test}}
-          completed_at_test=${{steps.execution_timestamps_test.outputs.endtime_test}}
-          started_at_build=${{steps.execution_timestamps_build.outputs.starttime_build}}
-          completed_at_build=${{steps.execution_timestamps_build.outputs.endtime_build}}
+          started_at_test=${{steps.execution_timestamps.outputs.starttime_test}}
+          completed_at_test=${{steps.execution_timestamps.outputs.endtime_test}}
+          started_at_build=${{steps.execution_timestamps.outputs.starttime_build}}
+          completed_at_build=${{steps.execution_timestamps.outputs.endtime_build}}
 
           START_TIME_TEST=$(date -d "$started_at_test" +%s)
           END_TIME_TEST=$(date -d "$completed_at_test" +%s)
