--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -87,13 +87,16 @@ jobs:
       - name: Log in to the Container registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login $REGISTRY -u ${{ github.actor }} --password-stdin
 
+
       - name: build Docker image on push event
         if: github.event_name == 'push'
         run: docker build -t $REGISTRY/$IMAGE_NAME:${GITHUB_SHA::7} -t $REGISTRY/$IMAGE_NAME:latest .
 
       - name: build Docker image on PR event
         if: github.event_name == 'pull_request'
-        run: docker build -t $REGISTRY/$IMAGE_NAME:${github.event.pull_request.head.sha::7} -t $REGISTRY/$IMAGE_NAME:latest .
+        run: |
+          PR_SHA7=${{github.event.pull_request.head.sha}}
+          docker build -t $REGISTRY/$IMAGE_NAME:${{github.event.pull_request.head.sha::7}} -t $REGISTRY/$IMAGE_NAME:latest .
 
       - name: push Docker image on push event
         if: github.event_name == 'push'
@@ -101,7 +104,7 @@ jobs:
 
       - name: push Docker image on PR event
         if: github.event_name == 'pull_request'
-        run: docker push $REGISTRY/$IMAGE_NAME:${github.event.pull_request.head.sha::7} && docker push $REGISTRY/$IMAGE_NAME:latest
+        run: docker push $REGISTRY/$IMAGE_NAME:${{github.event.pull_request.head.sha::7}} && docker push $REGISTRY/$IMAGE_NAME:latest
 
       #---Build Docker image, Login & Publish to Docker Packages - WITH 3RD PARTY ACTIONS---
       #- name: Log in to the Container registry
