--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,12 +3,12 @@ name: myCI
 on:
   #workflow_dispatch: #manual start from Github UI or API
   push:
-    branches: [master, dev]
+    branches: dev
   pull_request:
-    branches: [master, dev]
+    branches: dev
 
 jobs:
-  test_job:
+  test:
     timeout-minutes: 30
     runs-on: ubuntu-20.04
     defaults:
@@ -23,39 +23,30 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: use node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
       
-      - name: Install dependencies
-        #run: npm install
-        run: npm ci  		#"ci" is (theoretically?) faster than "install"
+      - name: install
+        run: npm ci
 
-      - name: Linting
+      - name: lint
         run: npm run lint
      
-      - name: Test phase
+      - name: run
         id: test_phase
         run: npm run test -- --watch=false --browsers=ChromeHeadless
 
-      - name: Check if tests were successful and exit on failure
+      - name: check #Check if tests were successful and exit on failure
         if: ${{ failure() && steps.test_phase.conclusion == 'failure' }}
         run: exit 1
 
-      #- name: Job's running time !!!!!this approach DOESN'T WORK!!!! because .run_duration_ms parameter is awailable only after this workflow completion and accessible only from other actions, which isn't possible according to this test task conditions (I can't create additional yaml files)
-      #  id: execution_time
-      #  run: |
-      #    curl \
-      #      -H "Accept: application/vnd.github+json" \ 
-      #      -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-      #      https://api.github.com/repos/${{ github.actor }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/timing
-
-
-  build_job:
+    
+  build:
     timeout-minutes: 30
     runs-on: ubuntu-20.04
-    needs: test_job
+    needs: test
 
     env:
       REGISTRY: ghcr.io
@@ -72,70 +63,36 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: Use Node.js
+      - name: use node.js
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
       
-      - name: Install dependencies
+      - name: install
         run: npm ci
 
-      - name: Buld phase
+      - name: buld
         run: npm run build
 
       #---Build Docker image, Login & Publish to Docker Packages---
-      - name: Log in to the Container registry
+      - name: login #log in to the container registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login $REGISTRY -u ${{ github.actor }} --password-stdin
 
-      - name: build Docker image on push event
-        if: github.event_name == 'push'
-        run: docker build -t $REGISTRY/$IMAGE_NAME:${GITHUB_SHA::7} -t $REGISTRY/$IMAGE_NAME:latest .
+      - name: build Docker image on push event ###########
+        run: docker build -t $REGISTRY/$IMAGE_NAME:${GITHUB_SHA::7} -t $REGISTRY/$IMAGE_NAME:${GITHUB_SHA: -7:0} -t $REGISTRY/$IMAGE_NAME:latest .
 
-      - name: build Docker image on PR event
-        if: github.event_name == 'pull_request'
-        run: |
-          PR_SHA7=${{github.event.pull_request.head.sha}}
-          docker build -t $REGISTRY/$IMAGE_NAME:${PR_SHA7::7} -t $REGISTRY/$IMAGE_NAME:latest .
-
-      - name: push Docker image on push event
+      - name: push Docker image on push event ########
         if: github.event_name == 'push'
         run: docker push $REGISTRY/$IMAGE_NAME:${GITHUB_SHA::7} && docker push $REGISTRY/$IMAGE_NAME:latest
 
-      - name: push Docker image on PR event
-        if: github.event_name == 'pull_request'
-        run: |
-          PR_SHA7=${{github.event.pull_request.head.sha}}
-          docker push $REGISTRY/$IMAGE_NAME:${PR_SHA7::7} && docker push $REGISTRY/$IMAGE_NAME:latest
-
-      #---Build Docker image, Login & Publish to Docker Packages - WITH 3RD PARTY ACTIONS---
-      #- name: Log in to the Container registry
-      #  uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-      #  with:
-      #    registry: $REGISTRY
-      #    username: ${{ github.actor }} #${{ github.repository_owner }}
-      #    password: ${{ secrets.GITHUB_TOKEN }}
-      
-      #- name: Extract metadata (tags, labels) for Docker
-      #  id: meta
-      #  uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-      #  with:
-      #    images: $REGISTRY/$IMAGE_NAME
-            
-      #- name: Build and push Docker image
-      #  uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-      #  with:
-      #    context: ./angular
-      #    push: true
-      #    tags: ${{ steps.meta.outputs.tags }}
-      #    labels: ${{ steps.meta.outputs.labels }}
   
-  stats_job:
+  stats:
     timeout-minutes: 30
     runs-on: ubuntu-20.04
     if: ${{ always() }}
-    needs: [build_job, test_job]
+    needs: [build, test]
     steps:
-      - name:  Extract TEST and BUILD job starting & ending time
+      - name:  Extract TEST and BUILD job starting & ending time #####
         id: execution_timestamps
         run: |
           echo "::set-output name=starttime_test::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[0].started_at')" && echo "::set-output name=endtime_test::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[0].completed_at')"
@@ -164,7 +121,7 @@ jobs:
           echo "::set-output name=el_minutes::$(($ELAPSE/60%60))"
           echo "::set-output name=el_seconds::$(($ELAPSE%60))"
       
-      - name: get email for Committer on PR or pusher on PUSH
+      - name: get email for Committer on PR or pusher on PUSH ########
         id: email
         run: |
           if [[ ${{ github.event_name }} == 'pull_request' ]]; then
@@ -173,21 +130,21 @@ jobs:
             echo "::set-output name=user_email::${{ github.event.pusher.email }}"
           fi
 
-      - name: Get job conclusion (success or failure)
+      - name: Get job conclusion (success or failure) ########
         id: job_conclusion
         run: |
-          echo "::set-output name=test_job_conclusion::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[0].conclusion')"
-          echo "::set-output name=build_job_conclusion::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[1].conclusion')"
+          echo "::set-output name=test_conclusion::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[0].conclusion')"
+          echo "::set-output name=build_conclusion::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[1].conclusion')"
 
-      #---Email notifications v2 with elapsed time---
-      - name: Send email notifications for this job v2
+      #---Email notifications with elapsed time---
+      - name: Send email notifications for this job
         if: ${{ always() }} #run this step even if previous steps failed
         uses: dawidd6/action-send-mail@6d23605227c578d570e5594931720f85a1af55a2
         with:
           # SMTP server address
           server_address: ${{ secrets.MAIL_SERVER }}
           # SMTP server port
-          server_port: 465 #587
+          server_port: 465
           # Authenticate as this user to SMTP server
           username: ${{ secrets.MAIL_USERNAME }}
           # Authenticate with this password to SMTP server
@@ -197,10 +154,10 @@ jobs:
           # Recipients mail addresses (separated with comma)
           to: ${{ steps.email.outputs.user_email }} #${{ github.event.pusher.email }}
           # Full name of mail sender (might be with an email address specified in <>)
-          from: Github CI v2
+          from: Github CI
           # Whether this connection use TLS (default is true if server_port is 465)
           secure: true
           # Body of mail message (might be a filename prefixed with file:// to read from)
-          body: Build job for ${{ github.repository }} has completed. Result status for TESTS-${{ steps.job_conclusion.outputs.test_job_conclusion }}, for BUILD JOB-${{ steps.job_conclusion.outputs.build_job_conclusion }} . Time ${{ steps.calculate_time.outputs.el_hours }}h ${{ steps.calculate_time.outputs.el_minutes }}m ${{ steps.calculate_time.outputs.el_seconds }}s (${{ steps.calculate_time.outputs.elpsd }} sec)
+          body: Build job for ${{ github.repository }} has completed. Result status for TESTS-${{ steps.job_conclusion.outputs.test_conclusion }}, for BUILD JOB-${{ steps.job_conclusion.outputs.build_conclusion }} . Time ${{ steps.calculate_time.outputs.el_hours }}h ${{ steps.calculate_time.outputs.el_minutes }}m ${{ steps.calculate_time.outputs.el_seconds }}s (${{ steps.calculate_time.outputs.elpsd }} sec)
           # Allow unsigned/invalid certificates
           ignore_cert: true
