--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,9 @@ jobs:
 
       - name: start time
         id: start
-        run: printf "::set-output name=start_time::$('%(%s)T\n')"
+        run: |
+          printf -v now '%(%s)T'
+          echo "::set-output name=start_time::$now"
       
       - name: use node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
@@ -147,13 +149,17 @@ jobs:
       - name: Get job conclusion (success or failure) ########
         id: job_conclusion
         run: |
-          echo "::set-output name=test_conclusion::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[0].conclusion')"
-          echo "::set-output name=build_conclusion::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[1].conclusion')"
+          echo "::set-output name=test_conclusion::$(curl -H "Accept: application/vnd.github+json" \
+          https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs \
+          | jq '.jobs[0].conclusion')"
+          echo "::set-output name=build_conclusion::$(curl -H "Accept: application/vnd.github+json" \
+          https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs \
+          | jq '.jobs[1].conclusion')"
 
       - id: calculate_duration
         run: |
           printf -v now '%(%s)T'
-          ELPSD=$((now - ${{needs.test.outputs.start_time}}))
+          ELPSD=$(($now - ${{needs.test.outputs.start_time}}))
           echo "::set-output name=elapsed::$ELPSD"
 
       #---Email notifications with elapsed time---
